fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -1113,9 +1113,10 @@ PHONES
   }
   .header__input-wrapper {
     max-width: 100%;
+    margin-bottom: 120px;
   }
   .header__input-button {
-    top: 4.8rem;
+    top: 5rem;
     right: 50%;
     transform: translateX(50%);
   }
